[package]
name = "gogw"
version = "1.0.20230709"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-tun = "0.8.0"
